@@ -8,7 +8,7 @@ Feature: Basic smell detection
     Then the exit status indicates smells
     And it reports:
     """
-    spec/samples/inline.rb -- 44 warnings:
+    spec/samples/inline.rb -- 43 warnings:
       CompilationError has no descriptive comment (IrresponsibleModule)
       File has no descriptive comment (IrresponsibleModule)
       File#self.write_with_backup has approx 6 statements (TooManyStatements)
@@ -48,7 +48,6 @@ Feature: Basic smell detection
       Inline::C#parse_signature has boolean parameter 'raw' (BooleanParameter)
       Inline::C#parse_signature has the variable name 'x' (UncommunicativeVariableName)
       Inline::C#parse_signature is controlled by argument raw (ControlParameter)
-      Inline::C#strip_comments doesn't depend on instance state (UtilityFunction)
       Inline::C#strip_comments refers to src more than self (FeatureEnvy)
       Module#inline calls Inline.const_get(lang) 2 times (DuplicateMethodCall)
       Module#inline calls options[:testing] 2 times (DuplicateMethodCall)
@@ -179,7 +178,7 @@ Feature: Basic smell detection
     Then the exit status indicates smells
     And it reports:
     """
-    spec/samples/redcloth.rb -- 98 warnings:
+    spec/samples/redcloth.rb -- 94 warnings:
       RedCloth has at least 44 methods (TooManyMethods)
       RedCloth has the variable name 'a' (UncommunicativeVariableName)
       RedCloth has the variable name 'b' (UncommunicativeVariableName)
@@ -214,7 +213,6 @@ Feature: Basic smell detection
       RedCloth#blocks refers to blk more than self (FeatureEnvy)
       RedCloth#clean_html calls tags[tag] 2 times (DuplicateMethodCall)
       RedCloth#clean_html contains iterators nested 3 deep (NestedIterators)
-      RedCloth#clean_html doesn't depend on instance state (UtilityFunction)
       RedCloth#clean_html has approx 15 statements (TooManyStatements)
       RedCloth#clean_html has the variable name 'q' (UncommunicativeVariableName)
       RedCloth#clean_html has the variable name 'q2' (UncommunicativeVariableName)
@@ -222,11 +220,9 @@ Feature: Basic smell detection
       RedCloth#clean_html refers to tags more than self (FeatureEnvy)
       RedCloth#clean_white_space has approx 7 statements (TooManyStatements)
       RedCloth#clean_white_space refers to text more than self (FeatureEnvy)
-      RedCloth#flush_left doesn't depend on instance state (UtilityFunction)
       RedCloth#flush_left refers to text more than self (FeatureEnvy)
       RedCloth#footnote_ref refers to text more than self (FeatureEnvy)
       RedCloth#glyphs_textile has approx 10 statements (TooManyStatements)
-      RedCloth#htmlesc doesn't depend on instance state (UtilityFunction)
       RedCloth#htmlesc is controlled by argument mode (ControlParameter)
       RedCloth#htmlesc refers to str more than self (FeatureEnvy)
       RedCloth#incoming_entities refers to text more than self (FeatureEnvy)
@@ -249,7 +245,6 @@ Feature: Basic smell detection
       RedCloth#lT has the name 'lT' (UncommunicativeMethodName)
       RedCloth#lT is controlled by argument text (ControlParameter)
       RedCloth#lT refers to text more than self (FeatureEnvy)
-      RedCloth#no_textile doesn't depend on instance state (UtilityFunction)
       RedCloth#no_textile refers to text more than self (FeatureEnvy)
       RedCloth#pba calls $1.length 2 times (DuplicateMethodCall)
       RedCloth#pba has approx 21 statements (TooManyStatements)
